<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_ap"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_wifi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/set_wireless"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_blue"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@color/light_blue"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/txt_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/net_ssid"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/et_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:textColor="#ffffff"
                />

            <TextView
                android:id="@+id/txt_security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_level"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_security"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rd_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="no"
                    android:textColor="#ffffff"/>

                <RadioButton
                    android:id="@+id/rd_wpa"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="WPA"
                    android:textColor="#ffffff"/>

                <RadioButton
                    android:id="@+id/rd_wpa2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="WPA2"
                    android:textColor="#ffffff"/>
            </RadioGroup>

            <TextView
                android:id="@+id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/password"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#ffffff" />
            <TextView
                android:id="@+id/txt_password_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password_tips"
                android:textColor="#ffffff" />

            <CheckBox
                android:id="@+id/cbx_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/show_password"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/bt_start_wifiap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_transparent"
            android:enabled="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/open_wireless"
            android:textColor="#ffffff"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"/>

        <TextView
            android:id="@+id/bt_stop_wifiap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_transparent"
            android:enabled="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/close_wireless"
            android:textColor="#ffffff"/>
    </LinearLayout>

</LinearLayout>
