<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_wifi_name1"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:padding="15dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#FFFFFF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_custom_dialog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/txt_label_signal_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signal_strength"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/txt_signal_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signal_strength"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_label_security_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/security_level"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/txt_security_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_level"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/show_password"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#fed5d6d6">
        <Button
            android:id="@+id/txt_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            />
        <Button
            android:id="@+id/txt_btn_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/connect"
            android:textColor="@android:color/black"
            />
        <!--<TextView-->
            <!--android:id="@+id/txt_btn_cancel"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:focusable="true"-->
            <!--android:clickable="true"-->
            <!--android:enabled="true"-->
            <!--android:background="@drawable/bg_transparent"-->
            <!--android:gravity="center"-->
            <!--android:padding="10dp"-->
            <!--android:text="@string/cancel"-->
            <!--android:textColor="#ffffff" />-->

        <!--<View-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@android:color/holo_blue_light"/>-->

        <!--<TextView-->
            <!--android:id="@+id/txt_btn_connect"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:focusable="true"-->
            <!--android:clickable="true"-->
            <!--android:enabled="true"-->
            <!--android:background="@drawable/bg_transparent"-->
            <!--android:gravity="center"-->
            <!--android:padding="10dp"-->
            <!--android:text="@string/connect"-->
            <!--android:textColor="#ffffff" />-->
    </LinearLayout>

</LinearLayout>