<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@mipmap/main_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="150dip"
        android:layout_weight="0.3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@mipmap/network_icon_wifi" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/open_wlan"
                android:textColor="#FFFFFF"
                android:textSize="25dp" />

            <Button
                android:id="@+id/switch1"
                android:layout_width="83px"
                android:layout_height="32px"
                android:layout_gravity="center_vertical"
                android:background="@drawable/switch_off"
                android:focusable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="25dp" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:scaleType="fitXY"
            android:src="@mipmap/line" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />
    </LinearLayout>
    <!--<ProgressBar-->
        <!--android:id="@+id/progressBar"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:visibility="invisible"-->
        <!--android:indeterminateDrawable="@anim/image_progress"-->
        <!--/>-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="10dp"-->
                <!--android:layout_weight="0.4"-->
                <!--android:orientation="horizontal">-->
                <!--<TextView-->
                    <!--android:id="@+id/textView2"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:background="@drawable/bg_settings"-->
                    <!--android:textSize="18dp"-->
                    <!--android:clickable="true"-->
                    <!--android:focusable="true"-->
                    <!--android:text="@string/wifi_hotspot"-->
                    <!--android:textColor="#FFFFFF"/>-->
            <!--</LinearLayout>-->
    <!-- Ap 关闭时的布局文件 ,默认不显示 -->

    <LinearLayout
        android:id="@+id/wifi_list_content_closed"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/wlan_closed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:text="@string/wifi_list_closed"
            android:textColor="#ffffffff"
            android:textSize="26.0sp" />
    </LinearLayout>

    <!-- Ap 启动时的布局 -->

    <LinearLayout
        android:id="@+id/wifi_enable_wait"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2.8"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/progressStyle"
            android:layout_width="120px"
            android:layout_height="120px"
            android:layout_centerInParent="true"
            android:layout_gravity="center" >
        </ProgressBar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/wifi_enable_openning"
            android:textColor="#ffffffff"
            android:textSize="27sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dip"
        android:layout_weight="3"
        android:gravity="top"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5" />

            <com.changhong.wifisetting.component.MyListView
                android:id="@+id/freelook_listview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:cacheColorHint="#00000000"
                android:divider="@mipmap/listview_dividing_line"
                android:dividerHeight="1.0dip"
                android:listSelector="@drawable/bg_transparent">
            </com.changhong.wifisetting.component.MyListView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

</LinearLayout>
